<resources>
    <string name="app_name">Stock and BalanceSheet</string>
    <string name="hindi">हिंदी</string>
    <string name="hinglish">Hinglish</string>
    <string name="english">English</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="validate">Validate</string>

    <string name="hint_phone_no">Enter Phone Number</string>
    <string name="hint_otp">Enter OTP</string>
    <!-- <string name="hint_group_name">Group name</string>
     <string name="hint_fullname">Enter Fullname</string>
     <string name="hint_business">Enter Business Type</string>
     <string name="hint_email">Enter Email Address</string>-->
    <string name="verify_otp">Verify Otp</string>
    <string name="my_credit">My Credit</string>
    <string name="business">Business</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_customer">Add Customer</string>
    <string name="permission_message"> require permissions please open the app settings and enable permissions to continue download video </string>
    <string name="accept_payment">Accept Payment</string>
    <string name="add_payment">Add Payment</string>
    <string name="add_note">Add Note (Optional)</string>
    <string name="pay">Pay</string>
    <string name="transaction_policy_text">All transactions are safe &amp; secure click to know more</string>
    <string name="balance">Balance</string>
    <string name="balance_">Balance</string>
    <string name="check_network">Check Network</string>
    <string name="call">Call</string>
    <string name="send">Send</string>
    <string name="share_on_whatsapp">Share on WhatsApp</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="profile">Profile</string>
    <string name="added_on">Added On</string>
    <string name="rupees_symbol">₹</string>
    <string name="today">Today</string>
    <string name="loading">Loading...</string>
    <string name="advance">Advance</string>
    <string name="due">Due</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="enter_address">Enter Address</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="sync_successfull">Sync successfull</string>
    <string name="delete_credit">Delete Credit</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="business_hint">Add Your Business</string>
    <string name="send_business_card">Send Business Card</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="add_address">Add Address</string>
    <string name="setting">Setting</string>
    <string name="sms_language">SMS Language</string>
    <string name="transaction_sms">Transaction SMS</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="delete_customer_dialog">Are you sure want to delete customer?</string>
    <string name="delete_transaction_dialog">Are you sure want to delete Transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted_on">Deleted On : </string>
    <string name="credit_deleted">Credit Deleted</string>
    <string name="payment_deleted">Payment deleted</string>
    <string name="hint_search_customer">Search Customer...</string>
    <string name="balance_sheet">Balance Sheet</string>
    <string name="stock_management">Stock Management</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="give_credit">Give Credit</string>
    <string name="note">Note :</string>
    <string name="view_detail">View Detail</string>
    <string name="delete_payment">Delete Payment</string>
    <string name="settings">Settings</string>
    <string name="send_transaction_sms">Send Transaction SMS</string>
    <string name="payment_received">Payment Received</string>
    <string name="delete">Delete</string>
    <string name="customer_will_get_message_for_deleted_payment">Customer will get SMS for deleted payment</string>
    <string name="payment_sent">Payment Sent</string>
    <string name="delete_customer_message">Have to make customer balance 0 to delete customer please add customer remian credit.</string>
    <string name="give_payment">Give Payment of</string>
    <string name="accept_payment_message">Accept Payment of</string>
    <string name="give">Give</string>
    <string name="make_transaction">Make Transaction</string>
    <string name="customers">Customers</string>
    <string name="account_statement">Account Statement</string>
    <string name="download_backup">Download Backup</string>
    <string name="security">Security</string>
    <string name="payment_reminder">Payment Reminder</string>
    <string name="language">Language</string>
    <string name="password">Password</string>
    <string name="set_password">Set Password</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="update_password">Update Password</string>
    <string name="app_lock">App Lock</string>
    <string name="payment_password">Payment Password</string>
    <string name="sign_out_from_all_device">Sign out from all devices</string>
    <string name="business_profile">Business Profile</string>
    <string name="add_email">Add Email</string>
    <string name="add_business">Add Business</string>
    <string name="enter_security_code">Enter Security Code</string>
    <string name="enter_min_six_digit">Enter min 6 digit.</string>
    <string name="otp_null_error_message">OTP should not be null.</string>
    <string name="verification_success">Verification Success</string>
    <string name="code_sent">OTP Sent</string>
    <string name="set_new_password">Set New Password</string>
    <string name="password_change_succes">Password changed successfully.</string>
    <string name="device_not_same">Device not same</string>
    <string name="verification_failed">Verification Failed, Invalid credentials</string>
    <string name="update">Update</string>
    <string name="transaction_error">enter valid amount</string>
    <string name="select_contact">Select Contact</string>
    <string name="not_sync">Not Sync</string>
    <string name="fullname">Full Name</string>
    <string name="sync_data_from_server">Data Synchronizing...</string>

    <string name="accept_payment_msg">Rs.AMOUNT payment accepted by NAME(NUMBER) Balance:Rs.TOTAL TYPE</string>
    <string name="give_payment_msg">Rs.AMOUNT dues added by NAME(NUMBER) Balance:Rs.TOTAL TYPE</string>
    <string name="delete_advance_msg">Rs.AMOUNT payment cancelled by NAME. Balance:Rs.TOTAL TYPE</string>
    <string name="delete_give_msg">Rs.AMOUNT dues cancelled by NAME. Balance:Rs.TOTAL TYPE</string>
    <string name="add_product">Add Product</string>
    <string name="add_stock">Add Stock</string>
    <string name="sell_stock">Sell Stock</string>
    <string name="enter_product">Enter Product</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_valid_quantity">Enter valid quantity</string>
    <string name="enter_valid_price">Enter valid price</string>
    <string name="select_product">Select Product</string>
    <string name="product_list">Product List</string>
    <string name="total_stock">Total Stock</string>
    <string name="available_stock">Available stock :</string>
    <string name="purchase_price">Purchase price :</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="total_profit">Total Profit</string>
    <string name="stock">Stock</string>
    <string name="profit">Profit</string>
    <string name="total_price">Total Price : </string>
    <string name="net_balance">Net Balance</string>
    <string name="payments">Payments</string>
    <string name="credits">Credits</string>
    <string name="no_notes">No Notes</string>
    <string name="generating_pdf">Pdf Generating..</string>
    <string name="total">Total</string>
    <string name="stock_price">Stock Price</string>
    <string name="validate_your_mobile_number">Validate your mobile Number</string>
    <string name="you_will_get_otp_code_via_sms">You will get OTP code via SMS.</string>
    <string name="otp_has_been_sent_on">OTP has been sent on</string>
    <string name="resend">Resend</string>
    <string name="dont_recevied_code">Don\'t recevied the code?</string>

</resources>
