<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:ignore="NamespaceTypo">

    <RelativeLayout
        android:id="@+id/rlValidateMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">

            <TextView
                style="@style/RippleEffect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="serif"
                android:lineSpacingExtra="@dimen/_5sdp"
                android:text="@string/validate_your_mobile_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical">


                <com.hbb20.CountryCodePicker
                    android:id="@+id/countrycodePicker"
                    style="@style/RippleEffect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_defaultNameCode="IN"
                    app:ccp_showFullName="false"
                    app:ccp_showNameCode="true"
                    app:ccp_showPhoneCode="true"
                    card_view:ccpDialog_backgroundColor="@color/white" />

                <EditText
                    android:id="@+id/edtPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="serif"
                    android:hint="@string/hint_phone_no"
                    android:inputType="number"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:singleLine="true" />

                <TextView
                    style="@style/RippleEffect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/you_will_get_otp_code_via_sms"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgValidateNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/rounde_corner"
                android:padding="@dimen/_15sdp"
                android:rotation="180"
                android:src="@drawable/ic_back" />

            <!-- <TextView
                 android:id="@+id/txtValidateNumber"
                 style="@style/RippleEffect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_25sdp"
                 android:layout_marginRight="@dimen/_25sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/rounde_corner"
                 android:fontFamily="serif"
                 android:gravity="center"
                 android:padding="@dimen/_15sdp"
                 android:text="@string/validate"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/white" />-->

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutOTP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtOtpTitle"
            style="@style/RippleEffect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="serif"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:text="@string/otp_has_been_sent_on"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtOPT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:fontFamily="serif"
                android:inputType="number"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center">

                <TextView
                    style="@style/RippleEffect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/dont_recevied_code"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/txtResendOtp"
                    style="@style/RippleEffect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/resend"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtValidateOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rounde_corner"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="@dimen/_15sdp"
                android:text="@string/verify_otp"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>