<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.mycredit.AccountActivity">

    <include layout="@layout/action_bar_new" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <LinearLayout
                android:id="@+id/llUpdatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RippleEffect"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_update_password" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/update_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAppLock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RippleEffect"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_app_lock" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/app_lock"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPaymentPassword"
                android:layout_width="match_parent"
                style="@style/RippleEffect"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_payment_password" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/payment_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSignOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RippleEffect"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_sign_out" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/sign_out_from_all_device"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
